# ustc_verilog_oj_chisel_ans

./: .gitignore  .scalafmt.conf  CMakeLists.txt  Makefile  README.md  build.sbt  problem_list.md  startup.sh
.template/: CMakeLists.txt.template  build.sbt.template  init.hpp.template
sim_src/generated_files/cpp_files/: V.cmake  V.cpp  V.h  V__Syms.cpp  V__Syms.h  V___024root.h  V___024root__DepSet_h4508a8ee__0.cpp  V___024root__DepSet_h4508a8ee__0__Slow.cpp  V___024root__DepSet_hd8332d84__0.cpp  V___024root__DepSet_hd8332d84__0__Slow.cpp  V___024root__Slow.cpp  V__ver.d  verilator_args.txt
sim_src/generated_files/verilog/: Top.anno.json  Top.fir  Top.v
sim_src/src/: Top.nxdc  init.hpp  main.cpp
sim_src/verilog_gen/: Top.anno.json  Top.fir  Top.v
src/: auto_bind.cpp
src/main/scala/: Top.scala  TopApp.scala
src/main/scala/answers/: P0030.scala  P0053.scala  P0070.scala  P0078.scala  P0097.scala  P0099.scala  P0102.scala  P0108.scala  P0139.scala  P0143.scala
src/main/scala/bypass/: Bypass.scala
src/main/scala/dev_support/: NVBoardIOBundle.scala  SegDefineDec.scala  SegDefineHex.scala
src/main/scala/gcd/: GCD.scala
src/main/scala/top/: Top.scala
src/test/scala/gcd/: GCDSpec.scala
template_files/: CMakeLists.txt.template  build.sbt.template
